[project]
name = "chaos-vis-image-gen"
version = "0.1.0"
description = "Generate images from random attractor parameters"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "matplotlib",
  "numba",
  "imageio",
  "cryptography",
  "tqdm",
  "gradio",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
